<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.agregarSecreto.AgregarSecretoFragment">


    <TextView
        android:id="@+id/agregar_secreto_tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_secreto_tv_titulo" />

    <EditText
        android:id="@+id/agregar_secreto_et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/agregar_secreto_et_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/agregar_secreto_et_cadena_secreta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/agregar_secreto_et_secreto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/agregar_secreto_et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/agregar_secreto_et_descripcion"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/agregar_secreto_btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_secreto_btn_agregar" />
    <TextView
        android:id="@+id/agregar_secreto_tv_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />
</LinearLayout>