<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/login_tv_titulo" />

    <EditText
        android:id="@+id/login_et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_et_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_et_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_et_contrasenia"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_ingresar" />

    <Button
        android:id="@+id/login_btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_registrarse" />

    <TextView
        android:id="@+id/login_tv_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />
</LinearLayout>