<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.crearContacto.CrearContactoFragment">

    <EditText
        android:id="@+id/main_et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_et_nombre_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/main_et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_et_telefono_hint"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <EditText
        android:id="@+id/main_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/main_et_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/editar_btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_agregar_text" />

</LinearLayout>